css/styles.css
@font-face {
  font-family: GlacialIndifference;
  src: url('/fonts/GlacialIndifference-Regular.otf') format('opentype');
}

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

html {
  font-size: 20px;
}

body {
    background-color: #f9ffff;
    margin: 0;
    font-family: GlacialIndifference, Futura;
    color: #b0b4c1;
    text-align: center;
}

h1, h2, h3 {
  font-weight: bold;
  text-transform: uppercase;
}

h1 {
  color: #d7bd98;
  font-size: 8rem;
  margin: 2rem 0 2.3rem 0;
}

h2 {
  font-size: 2rem;
  margin: 1rem 0 1.5rem 0;
}

h3 {
  color: #d7bd98;
  font-size: 1.6rem;
  margin: 0.8rem 0 0.6rem 0;
}

p {
  line-height: 2;
  margin-bottom: 1rem;
}

a {
  color: #b0b4c1;
  font-weight: 800;
}

nav, footer {
  /*background: #e8e6db;
  */
  background: rgba(215, 189, 152, 0.4);
  z-index: 1000;
}

nav ul {
  padding: 0 2rem;
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

nav ul li {
  padding: 1rem 0;

}

.content {
  max-width: 800px;
  margin: 0 auto;
}

.wrapper {
  display: flex;
  flex-flow: column;
  align-items: center;
}

.wrapper .content {
  background-color: rgba(249, 255, 255, 0.9);
  margin: 2rem 1.5rem;
  z-index: 10;
}

.content > article {
  padding: 0.8rem 2rem;
}

.form-wrapper {
  position: relative;
}

/*.form-wrapper > .thank-you {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(249, 255, 255, 0.8);

  display: flex;
  flex-direction: column;
  justify-content: center;
}*/

.form-wrapper > .status {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(249, 255, 255, 0.8);

  display: flex;
  flex-direction: column;
  justify-content: center;
}

form {
  margin-bottom: 1.5rem;
}

form .input {
  display: flex;
  justify-content: flex-end;
  padding: .5rem;
}

form .input > * { flex-grow: 1; }

form .input > label {
  padding: .5em 1em .5em 0;
  flex: 1;
}

form .input > input {
  flex: 2;
  background: #ffffff;
  color: #696d79;
  border: 1px solid #d7bd98;
  border-radius: 5px;
  padding: .5rem 1rem .5rem 1rem;
}

form > div > button {
  background: #d7bd98;
  font-size: 1.3rem;
  border: 0;
  border-radius: 5px;
  padding: .5em 0;
}

form > div > button:disabled {
  background: rgba(215, 189, 152, 0.4);
}

.error {
  color: #d48181;
}

.error-prompt {
  display: none;
}

.error .error-prompt {
  display: block;
}

.error .input input {
  border: 1px solid #ab2e2e;
}

.frame-wrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;
  overflow: hidden;
  margin-bottom: -42px;
}

.frame-wrapper iframe {
  position: absolute;
  top: -50px;
  left: 0;
  width: 100%;
  height: 100%;
}

.emphasis {
  /*color: #70885d;*/
  /*font-style: italic;*/
}

footer {
  padding-top: 1.5rem;
}

footer .content {
  display: flex;
  flex-direction: row;
}

footer .footer-contact {
  flex-grow: 3;
}

footer .footer-address {
  flex-grow: 1;
}

.contact-card {
  margin-bottom: 2rem;
}

.contact-card a {
  font-weight: 400;
}

.address-card .name,
.contact-card .name {
  font-size: 1.2rem;
  font-weight: 800;
  margin: 0.6rem 0.2rem;
}

.contact-card .info {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.address-card p {
  margin-bottom: 0;
  line-height: 1;
}

.lauf {
  background-image: url('/img/lauf.svg');
  background-repeat: no-repeat;
  background-size: 100vh;
  background-position: center;
  height: 100vh;
  width: 100vh;
  position: fixed;
  top: 0;
  z-index: 1;
}

#lauf-left.lauf {
  left: -80vh;
}
#lauf-right.lauf {
  right: -80vh;
}

.wrapper .hidden {
  display: none;
}

